--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@babel/preset-react": "^7.18.6",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.10",
+    "@types/styled-components": "^5.1.26",
     "@vitejs/plugin-react": "^3.0.0",
     "babel-jest": "^29.4.1",
     "jest": "^29.4.1",
